finished modular application